@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/livecd_stage2_target.py,v 1.39 2005/04/28 13:46:48 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/livecd_stage2_target.py,v 1.40 2005/04/29 13:32:51 rocket Exp $
 
 """
 Builder class for a LiveCD stage2 build.
@@ -86,13 +86,20 @@ class livecd_stage2_target(generic_stage_target):
 			myf.close()
 
 	def set_action_sequence(self):
+	    #self.settings["action_sequence"]=["dir_setup","unpack","unpack_snapshot",\
+	#		    "config_profile_link","setup_confdir","portage_overlay",\
+	#		    "bind","chroot_setup","setup_environment","run_local",\
+	#		    "build_kernel","bootloader","preclean","livecd_update",
+	#		    "root_overlay","fsscript","rcupdate","unmerge",\
+	#		    "unbind","remove","empty","target_setup",\
+	#		    "setup_overlay","create_iso","clear_autoresume"]
 	    self.settings["action_sequence"]=["dir_setup","unpack","unpack_snapshot",\
 			    "config_profile_link","setup_confdir","portage_overlay",\
 			    "bind","chroot_setup","setup_environment","run_local",\
 			    "build_kernel","bootloader","preclean","livecd_update",
 			    "root_overlay","fsscript","rcupdate","unmerge",\
 			    "unbind","remove","empty","target_setup",\
-			    "setup_overlay","create_iso","clear_autoresume"]
+			    "setup_overlay","create_iso"]
 
 def register(foo):
 	foo.update({"livecd-stage2":livecd_stage2_target})
