@@ -1,5 +1,10 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.248 2005/04/28 16:45:43 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.249 2005/04/29 13:32:51 rocket Exp $
+
+  29 Apr 2005; Eric Edgar <rocket@gentoo.org>
+  modules/livecd_stage2_target.py, targets/support/bootloader-setup.sh,
+  targets/support/create-iso.sh:
+  Fix isolinux so that it finds menus and kernels and stuff
 
   28 Apr 2005; Eric Edgar <rocket@gentoo.org>
   modules/generic_stage_target.py:
